商铺查询区分城市

--- a/wzz-parent/wzz-gw/src/main/webapp/index.html
+++ b/wzz-parent/wzz-gw/src/main/webapp/index.html
@@ -29,7 +29,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://192.168.1.101:8080/gateway/api-docs";
+        url = "http://www.wangzhizhu.com/gateway/api-docs";
       }
       window.swaggerUi = new SwaggerUi({
         url: url,
