--- a/wzz-parent/wzz-gw/src/main/webapp/index.html
+++ b/wzz-parent/wzz-gw/src/main/webapp/index.html
@@ -29,7 +29,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://www.wangzhizhu.com/gateway/api-docs";
+        url = "http://"+location.host+"/gateway/api-docs";
       }
       window.swaggerUi = new SwaggerUi({
         url: url,
